# IsVirusPy

./: README.md  main.py  pyproject.toml
isviruspy/: __init__.py  cli.py
isviruspy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
isviruspy/modules/: ml_detector.py  report_generator.py  sandbox_analyzer.py  static_analyzer.py  threat_intel.py  yara_engine.py
isviruspy/rules/: malware_detection.yar
test_samples/: benign_sample.txt
